Minor CSS changes / tab title change to fix visual bugs
- Cart added success message flashing upon landing on product detail for the first time.
- Uneven footer.
- Not CSS, but index page is "React App", not "Mako Bikes"
- Border on NavHeader removed
- Hover over website nav links
- Remove link shows pointing cursor

--- a/src/css/Cart.css
+++ b/src/css/Cart.css
@@ -47,6 +47,11 @@
   color: rgb(61, 157, 253);
   font-weight: bold;
   padding: 5px;
+  cursor: pointer;
+}
+
+.cart-item .remove-from-cart:hover {
+  color: rgb(148, 202, 255);
 }
 
 .total {
