--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -39,7 +39,7 @@
 
   .directory {
     margin: 15px;
-    min-width: 100px;
+    min-width: 150px;
   }
 
 }
