--- a/src/css/NavHeader.css
+++ b/src/css/NavHeader.css
@@ -1,5 +1,4 @@
 .header {
-  border: 1px solid black;
   display: grid;
   grid-template-areas:
   "logo empty cart-menu"
@@ -127,7 +126,19 @@
   font-size: 150%;
 }
 
-.website-links .link:nth-child(odd) {
+.website-links .link a {
+  transition: color 300ms;
+}
+
+.website-links .link a:hover {
+  color: rgb(90,90,90);
+}
+
+.website-links:not(.closed) {
   border-top: 1px solid rgb(86, 86, 86);
   border-bottom: 1px solid rgb(86, 86, 86);
+}
+
+.link:nth-child(odd) {
+  border-bottom: 1px solid rgb(181, 181, 181);
 }
