--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Urbanist&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Abel&display=swap');
 
+.no-display {
+  display: none !important;
+}
 
 body {
   margin: 0;
